# learn-solana

./: .gitignore  README.md
blog-solana/: Anchor.toml  package-lock.json
blog-solana/migrations/: deploy.ts
blog-solana/programs/practice/: Cargo.toml
blog-solana/programs/practice/src/: lib.rs  states.rs
blog-solana/tests/: practice.ts
helloworld/: readme.md
helloworld/native/: Cargo.toml
helloworld/native/src/: lib.rs
helloworld/native/test/: index.ts
multi-sig/: Anchor.toml  Readme.md  package-lock.json  package.json  utils.ts
multi-sig/programs/multi-sig/: Cargo.toml
multi-sig/programs/multi-sig/src/: errors.rs  lib.rs  state.rs
multi-sig/programs/multi-sig/src/instructions/: approval.rs  create_multisig.rs  create_transaction.rs  mod.rs
multi-sig/tests/: Test.toml  multi-sig.ts
multi-sig/tests/accounts/: index.ts  test_user1-keypair.json  test_user1-state.json  test_user2-keypair.json  test_user2-state.json  test_user3-keypair.json  test_user3-state.json  test_user4-keypair.json  test_user4-state.json
puppet/: Anchor.toml  package-lock.json
puppet/programs/puppet-master/: Cargo.toml
puppet/programs/puppet-master/src/: lib.rs
puppet/programs/puppet/src/: lib.rs
puppet/tests/: puppet.ts
simple-token-program/: Cargo.toml
simple-token-program/src/: state.rs
tic-tac-toe/: .pnp.cjs  Anchor.toml  package-lock.json
tic-tac-toe/programs/tic-tac-toe/: Cargo.toml
tic-tac-toe/tests/: tic-tac-toe.ts
todo-solana/: Anchor.toml  package-lock.json
todo-solana/programs/todo-solana/: Cargo.toml
todo-solana/tests/: todo-solana.ts
(+8 files in other folders)
